# rust-geojson-mapper

./: Cargo.toml  LICENSE  README.md
data/geojson/: ne_10m_admin_0_countries_prt.geojson  ne_10m_admin_1_label_points.geojson  ne_10m_populated_places_simple.geojson  ne_110m_graticules_1.geojson  ne_50m_land.geojson
data/natural-earth-vector-master/geojson/: ne_10m_admin_0_countries_kor.geojson  ne_10m_admin_1_states_provinces_scale_rank.geojson  ne_10m_bathymetry_F_5000.geojson  ne_10m_urban_areas.geojson
src/: app.rs  event.rs  main.rs  ui.rs
