# Cargo.toml
[package]
name = "plots"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = "0.3.5"
proj = { version = "0.30.0" }
proj-sys = { version = "0.26.0" }
approx = "0.5"
geojson = "0.24"
serde_json = "1.0"
ncurses = "6.0.1"
libc = "0.2.169"
chrono = "0.4" 
ratatui = "0.26.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
